@@ -352,7 +352,7 @@ show_separate_window(struct frontend *obj, struct question *q)
 static int
 generic_handler_string(struct frontend *obj, struct question *q, int eflags)
 {
-    newtComponent form, textbox, bOk, bCancel, entry, cRet;
+    newtComponent form, textbox, bCancel, entry, cRet;
     int width = 80, height = 24, t_height, t_width, win_width, win_height;
     int t_width_scroll = 0, t_width_title, t_width_buttons;
     int ret;
@@ -391,7 +391,7 @@ generic_handler_string(struct frontend *obj, struct question *q, int eflags)
     }
     t_height = win_height - 6;
     t_width = get_text_width(full_description);
-    t_width_buttons = 2*BUTTON_PADDING + get_text_width(continue_text(obj)) + 2;
+    t_width_buttons = 2*BUTTON_PADDING;
     if (obj->methods.can_go_back(obj, q))
         //  Add an interspace
         t_width_buttons += get_text_width(goback_text(obj)) + 3;
@@ -417,13 +417,11 @@ generic_handler_string(struct frontend *obj, struct question *q, int eflags)
         defval = (char *)question_getvalue(q, "");
     entry   = newtEntry(TEXT_PADDING, 1+t_height+1, defval, t_width, &result, eflags);
     if (obj->methods.can_go_back(obj, q)) {
-        bOk     = newtCompactButton(win_width - TEXT_PADDING - BUTTON_PADDING - strwidth(continue_text(obj)) - 3,  win_height-2, continue_text(obj));
         bCancel = newtCompactButton(TEXT_PADDING + BUTTON_PADDING - 1, win_height-2, goback_text(obj));
-        newtFormAddComponents(form, bCancel, textbox, entry, bOk, NULL);
+        newtFormAddComponents(form, bCancel, textbox, entry, NULL);
     } else {
-        bOk     = newtCompactButton((win_width-strwidth(continue_text(obj))-2)/2 - 1, win_height-2, continue_text(obj));
         bCancel = NULL;
-        newtFormAddComponents(form, textbox, entry, bOk, NULL);
+        newtFormAddComponents(form, textbox, entry, NULL);
     }
     newtFormSetCurrent(form, entry);
     cRet = newtRunForm(form);
@@ -590,7 +588,7 @@ show_multiselect_window(struct frontend *obj, struct question *q, int show_ext_d
 static int
 show_select_window(struct frontend *obj, struct question *q, int show_ext_desc)
 {
-    newtComponent form, listbox, textbox, bOk, bCancel, cRet;
+    newtComponent form, listbox, textbox, bCancel, cRet;
     int listflags = NEWT_FLAG_RETURNEXIT;
     int width = 80, height = 24;
     int win_width, win_height = -1, t_height, t_width, sel_height, sel_width;
@@ -635,7 +633,7 @@ show_select_window(struct frontend *obj, struct question *q, int show_ext_desc)
 #endif
     sel_width = strlongest(choices_trans, count);
     t_width = get_text_width(full_description);
-    t_width_buttons = 2*BUTTON_PADDING + get_text_width(continue_text(obj)) + 2;
+    t_width_buttons = 2*BUTTON_PADDING;
     if (obj->methods.can_go_back(obj, q))
         //  Add an interspace
         t_width_buttons += get_text_width(goback_text(obj)) + 3;
@@ -692,13 +690,11 @@ show_select_window(struct frontend *obj, struct question *q, int show_ext_desc)
     if (defchoice >= 0)
         newtListboxSetCurrent(listbox, defchoice);
     if (obj->methods.can_go_back(obj, q) || !show_ext_desc) {
-        bOk     = newtCompactButton(win_width - TEXT_PADDING - BUTTON_PADDING - strwidth(continue_text(obj)) - 3, win_height-2, continue_text(obj));
         bCancel = newtCompactButton(TEXT_PADDING + BUTTON_PADDING - 1, win_height-2, goback_text(obj));
-        newtFormAddComponents(form, bCancel, listbox, bOk, NULL);
+        newtFormAddComponents(form, bCancel, listbox, NULL);
     } else {
-        bOk     = newtCompactButton((win_width-strwidth(continue_text(obj))-2)/2 - 1, win_height-2, continue_text(obj));
         bCancel = NULL;
-        newtFormAddComponents(form, listbox, bOk, NULL);
+        newtFormAddComponents(form, listbox, NULL);
     }
     newtFormSetCurrent(form, listbox);
     cRet = newtRunForm(form);
@@ -762,7 +758,7 @@ newt_handler_boolean(struct frontend *obj, struct question *q)
     }
     t_height = win_height - 4;
     t_width = get_text_width(full_description);
-    t_width_buttons = 2*BUTTON_PADDING + get_text_width(continue_text(obj)) + 2;
+    t_width_buttons = 2*BUTTON_PADDING;
     t_width_buttons += get_text_width(yes_text(obj)) + 3;
     t_width_buttons += get_text_width(no_text(obj)) + 3;
     if (obj->methods.can_go_back(obj, q))
