@@ -2,6 +2,11 @@ cdebconf (0.60) UNRELEASED; urgency=low
 
   * Joey Hess
     - Increase debhelper version to one that can handle udebs.
+  * Denis Barbier
+    - In the newt frontend, remove the <Continue> button except for
+      questions of type note, error and multiselect (and also select
+      when extended description is very long and displayed in a
+      separate window).
 
  -- Joey Hess <joeyh@debian.org>  Thu,  1 Apr 2004 19:48:24 -0500
 
